# obd-report

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_expand_telemetry_pids.py  003_add_analytics_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: analytics.py  router.py  telemetry.py  trips.py  upload.py
backend/app/models/: __init__.py  driving_event.py  telemetry.py  trip.py  trip_segment.py
backend/app/schemas/: __init__.py  telemetry.py  trip.py
backend/app/services/: advanced_analytics.py  analytics.py  csv_parser.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: api_client.py  config.py  main.py
frontend/app/components/: metric_card.py  navbar.py  print_layout.py
frontend/app/pages/: 1_Upload.py  2_Trips.py  3_Dashboard.py  4_Compare.py  compare.py  dashboard.py  home.py  trips.py  upload.py
scripts/: init_db.sql
