[project]
name = "obd-frontend"
version = "0.1.0"
description = "OBD2 Telemetry Dashboard Frontend"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "dash-leaflet>=1.0.15",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
